test/types/type_variables/deitz/part1/test_clone_class1_old.chpl
class foo {
  var x;
  proc print() {
    writeln(x);
  }
}

var f : borrowed foo(2) = new borrowed foo(2);

f.print();
